# self_libs

./: README.md  pyproject.toml
src/sl/: __init__.py  common.py  mouse.py
