[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utils"
version = "0.0.1"
dependencies = [
    "pyautogui",
]
authors = [
    { name = "Nicolae Postica", email = "nicolae.postica2@gmail.com" },
]
description = "Utils for parsing"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/nicolaepostica/self_libs"
Issues = "https://github.com/nicolaepostica/self_libs"
